- Added -q/--q_bin_width parameter in order to further personalize the
  structure factor options.
- Updated the "aPdH.cell" file, in order to correctly reflect the
  structure of the article.
- Added arguments to tests in the Makefile:
  -a in test 1,
  -b in test 2,
  -q in test 3,
  -i was already in test 4,
  -w in test 5,
  -r in test 6.
  - Fixed padding in output files (purely cosmetic).
  - Fixed Tests to match new padding and options (see above).

## [1.0.0 rc7] - 2021-08-01
- Fixed a bug in reduced Pair Distribution Function (rPDF) (G(r))
  in alloys (pure element structures unaffected).
- Added weighing to the calculated properties, related to the above bug.
- Added units to Comma Separated Values (CSV) files.
- Actualized the test archives to match the new headings with units.


## [1.0.0 rc6] - 2021-07-28
- Added Contributing guidelines.
- Added Code of Conduct.
- Fixed several typos in the README and paper.
- Fixed a bug in Bin Width option (-w, --bin_width).
- Fixed the command "make clean-all" to match the README.

## [1.0.0 rc5] - 2021-07-23
- Several Typos in the project were corrected.
- Added units to the output files.
- Corrected paper.md to comply with reviewers corrections.

## [1.0.0 rc4] - 2021-04-11
- Major revision to README file
- Minor bugs corrections in main.cpp and Makefile.am

## [1.0.0 rc3] - 2021-03-04

### Added
- Tests now check validity of the results.
- Test 7 (make test7), also known as an stress test has been incorporated.
  This test should take several minutes and a large amount of RAM.
- Added a new option to clean the test directory (make clean-test)

### Modify
- clean-local option now leaves a working Makefile and the Binary.
  This modification should help with testing, while keeping a clean
  directory.
- cleanall option now replace clean-local

## [1.0.0 rc2] - 2021-02-28

### Added
- configure and Makefile.in, generated with GNU autotools.
- AUTHORS and Changelog files now included.

### Modify